--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "autoprefixer": "^10.4.2",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
+        "postcss-nesting": "^12.0.1",
         "resolve-url-loader": "^3.1",
         "sass": "^1.3",
         "sass-loader": "^8.0",
